# claude-hooks

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  version-check.yml
plugins/command-safety/: README.md
plugins/command-safety/.claude-plugin/: plugin.json
plugins/command-safety/hooks/: command_hook.py  hooks.json  kubectl_check.py  rm_check.py  terraform_check.py
plugins/env-protection/: README.md
plugins/env-protection/.claude-plugin/: plugin.json
plugins/env-protection/hooks/: env_bash_check.py  env_grep_check.py  env_hook.py  env_read_check.py  hooks.json
plugins/env-protection/scripts/: env_safe.py
plugins/file-protection/: README.md
plugins/file-protection/.claude-plugin/: plugin.json
plugins/file-protection/hooks/: claude_md_check.py  file_hook.py  file_length_check.py  hooks.json  read_hook.py  read_length_check.py  worktree_check.py
plugins/git-hooks/: README.md
plugins/git-hooks/.claude-plugin/: plugin.json
plugins/git-hooks/hooks/: cleanup_hook.py  command_utils.py  git_add_block.py  git_branch_workflow.py  git_checkout_safety.py  git_commit_block.py  git_pre_hook.py  hooks.json  worktree_suggestion.py
plugins/git-worktree-hooks/: README.md
plugins/git-worktree-hooks/.claude-plugin/: plugin.json
plugins/notifications/: README.md
tests/: conftest.py  test_command_safety.py  test_env_protection.py  test_file_protection.py  test_git_hooks.py  test_git_worktree_hooks.py
(+9 files in other folders)
