[project]
name = "claude-hooks"
version = "1.3.1"
description = "Claude Code hooks for git safety, command protection, and notifications"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "single"
